<resources>
    <string name="app_name">DermaScan</string>
    <string name="title_menu_1">Kurikulum Standar Industri Global</string>
    <string name="title_menu_2">Belajar Fleksibel Sesuai Jadwal Anda</string>
    <string name="title_menu_3">Code Review dari Developer Expert</string>
    <string name="title_menu_4">Alumni Terpercaya di Berbagai Perusahaan</string>
    <string name="desc_menu_1">Kurikulum dikembangkan bersama perusahaan dan pemilik teknologi dunia sesuai kebutuhan industri terkini.</string>
    <string name="article_home">Article</string>
    <string name="paralax_add_image_desc">You Can Scan Your Skin \n Problems and get advice</string>
    <string name="slogan">Capture, Detect, Heal</string>
    <string name="article_home_teks">Click here! To get interesting information about skin</string>
    <string name="welcome_user">Hai Alifan</string>
    <string name="protect_your_skin">Protect Your Skin</string>
    <string name="history_result">Result : </string>
    <string name="history_date">Date : </string>
    <string name="history_advice">Advice :</string>
    <string name="update_what_you_need">Update what you need</string>
    <string name="desc_article1">Sebagai salah satu negara dengan iklim tropis, penyakit kulit masih menjadi salah satu masalah kesehatan paling umum di Indonesia. Beberapa jenis penyakit kulit sering menjadi keluhan masyarakat di Indonesia. Berbagai macam faktor penyebab memang dapat memicu penyakit kulit, mulai dari suhu udara, kebersihan lingkungan dan juga kebersihan diri. Padatnya populasi masyarakat Indonesia terutama di kota besar, berikut dengan kondisi ekonomi dan kurangnya pengetahuan masyarakat akan pentingnya kesehatan dan kebersihan kulit, turut memengaruhi angka kejadian berbagai penyakit kulit yang sering terjadi di Indonesia.\n
    Beberapa jenis penyakit kulit yang banyak ditemukan di Indonesia, di antaranya:\n\n
    1.	Panu\n
        Panu atau yang dikenal dengan sebutan tinea versicolor atau pityriasis versicolor, merupakan infeksi jamur yang ditandai dengan munculnya bercak berwarna lebih terang atau lebih gelap dari warna asli kulit. Kondisi ini cukup mudah diatasi dengan obat panu, terutama jika penyebarannya tidak terlalu luas.\n
    Panu dapat muncul saat jamur Malassezia, yaitu salah satu jenis jamur yang normalnya terdapat di permukaan kulit, berkembang secara berlebih.  Perkembangan jamur ini dapat disebabkan oleh cuaca yang panas atau lembap, keringat berlebih, kondisi kulit berminyak, perubahan hormonal, ataupun sistem imunitas tubuh yang lemah.\n\n
    2.	Kudis\n
        Kudis atau scabies merupakan penyakit kulit yang mudah menular. Penyakit kulit ini dapat terjadi saat tungau kecil menggigit, dan masuk ke dalam lapisan kulit luar sehingga menyebabkan munculnya rasa gatal dan ruam. Jika area kulit yang mengalami ruam terasa gatal luar biasa, muncul benjolan kecil berwarna merah, dan terlihat lecet di area tersebut, maka bisa jadi Anda terkena penyakit kudis.\n
    Untuk mengatasi penyakit kudis, dokter mungkin akan memberikan salep atau krim yang mampu membunuh tungau penyebab kudis. Umumnya dioleskan ke seluruh permukaan kulit tubuh untuk menghindari perpindahan tungau ke bagian tubuh lain.\n\n
    3.	Kadas atau kurap\n
        Kurap merupakan penyakit kulit yang disebabkan oleh jamur dan dapat terjadi pada berbagai area tubuh, mulai dari kaki, lengan, hingga kuku. Gejala penyakit yang juga dikenal dengan istilah kadas ini adalah munculnya ruam kemerahan yang berbentuk melingkar, seperti cincin dengan garis luar yang tidak beraturan. Ruam ini dapat menimbulkan rasa gatal. Pada infeksi kurap yang parah, ruam kurap dapat melebar, melepuh dan membentuk luka nanah.\n
    Kontak langsung dengan penderita kurap bisa menyebabkan Anda tertular penyakit kurap. Selain itu, faktor lain seperti lingkungan yang lembap, keringat berlebih, penggunaan pakaian yang terlalu ketat, sistem kekebalan tubuh yang lemah, dan berbagi pakai handuk atau pakaian dengan orang lain juga bisa memicu terkena kurap.\n\n
    4.	Kusta atau lepra\n
        Indonesia menjadi salah satu negara dengan penderita kusta Penyakit kusta menyerang kulit, saluran pernapasan, sistem saraf perifer, dan juga mata.Penyakit yang disebabkan oleh bakteri Mycobacterium leprae ini memiliki gejala utama berupa munculnya luka berwarna pucat, atau benjolan pada kulit yang tak kunjung hilang selama beberapa minggu hingga beberapa bulan. Gejala pada penderita kusta tidak muncul dengan cepat. Setidaknya membutuhkan waktu 3-5 tahun, bahkan bisa mencapai 20 tahun, sejak infeksi terjadi hingga munculnya gejala.\n
    Memelihara kesehatan kulit dengan baik dapat menjadi langkah untuk menghindari penyakit kulit. Selain itu, menjaga kebersihan diri dan lingkungan, serta menanamkan pola hidup sehat juga perlu dilakukan. Bila mengalami keluhan seperti di atas, jangan ragu untuk berkonsultasi dengan dokter kulit guna mendapatkan penanganan yang tepat.\n\n
    </string>
    <string name="title_article2">8 Mitos dan Fakta Tentang Kulit yang Perlu Kamu Ketahui</string>
    <string name="title_article3">Mudah Banget, Ini 10 Cara Jaga Kesehatan Kulit!</string>
    <string name="desc_article3">Kulit merupakan organ tubuh yang paling luas dan memiliki fungsi penting bagi tubuh. Salah satu fungsi kulit yang penting antara lain sebagai mekanisme pertahanan pertama antara tubuh dengan lingkungan luar, melindungi tubuh dari bakteri, virus, dan berbagai bahan kimia. Jadi, kesehatan kulit memang harus dijaga. \n\n
    Selain itu, kulit juga berperan sebagai pengatur suhu tubuh, mengimbangi cairan, dan melindungi kulit dari paparan buruk sinar UV matahari. Banyak faktor yang dapat mempengaruhi kesehatan kulit seperti faktor genetik, penuaan, hormonal, stres, dehidrasi, dan masih banyak lagi. Sehingga, merawat kulit amat penting agar kulit kamu senantiasa terjaga kesehatannya. \n\n
    Berikut adalah cara-cara Merawat Kulit : \n\n
    Mengingat kulit memang harus dirawat, lalu bagaimana cara menjaga kesehatan kulit? Simak dulu ya. \n\n
    1. Perbanyak Minum Air \n
    Nah, inilah langkah yang harus dibiasakan agar kulit senantiasa sehat. Ya, perbanyaklah minum air. Dengan memperbanyak minum air, kondisi tubuh akan jauh terhindar dari dehidrasi yang mengakibatkan hilangnya kelembapan kulit. \n\n
    2. Gunakan Pelembap\n
    Pelembap merupakan salah satu produk perawatan kulit terpenting yang telah digunakan secara luas. Pelembap umumnya memiliki beberapa kandungan utama, yang dibagi berdasarkan mekanisme kerjanya, yaitu emolien, humektan, dan oklusif. \n
    Emolien bekerja dengan cara memperbaiki tekstur kulit, menghaluskan, dan melembutkan kulit. Sedangkan humektan berperan untuk menarik air dan oklusif dapat mempertahankan kelembapan kulit. Kulit yang kering lebih rentan mengalami infeksi dan peradangan. Untuk itu menggunakan pelembap secara rutin sangat penting. Usahakan untuk menggunakan pelembap segera setelah mandi agar dapat menyerap dengan baik. \n
    Sesuaikan produk pelembap dengan jenis kulit kamu. Jangan sembarangan menggunakan pelembab, karena kondisi kulit kamu menentukan khasiat akhir formulasi yang dimiliki pelembap itu sendiri. \n\n
    3. Gunakan Tabir Surya \n
    Sinar matahari yang sehari-hari selalu mengenai tubuh kita memancarkan radiasi dari paparan sinar matahari berupa sinar ultraviolet. Sinar ultraviolet B lebih berbahaya daripada sinar ultraviolet A. Upaya pertahanan dari kulit kita terhadap paparan radiasi tersebut berupa terjadinya pembentukan pigmen atau melanin oleh sel pembentuk pigmen di kulit, yaitu melanosit. \n
    Jika kulit terpapar sinar matahari langsung dalam jangka waktu tertentu, dapat menyebabkan gangguan kulit dramatis seperti kerutan, belang, bintik hitam atau jerawat, bahkan kanker kulit. Oleh karena itu menggunakan tabir surya secara rutin sangat penting. Aplikasikan ulang tabir surya kamu setiap 2 jam. \n
    Hal ini terutama apabila kamu berada di luar ruangan, berkeringat berlebih, berolahraga atau berenang. Keringat, air dan minyak di wajah dapat mengurangi kerja tabir surya kamu. \n\n
    4. Istirahat yang Cukup \n
    Tidur merupakan cara mudah untuk membantu menjaga kesehatan kulit dan tentu tidak mengeluarkan biaya. The National Sleep Foundation di Amerika Serikat, menganjurkan orang dewasa untuk tidur 7-9 jam setiap harinya. \n
    Kurang beristirahat tak hanya dapat meningkatkan risiko obesitas, menurunkan imunitas tubuh, diabetes, dan kanker, tetapi juga dapat berdampak pada kesehatan kulit dan menyebabkan terjadinya penuaan dini. Saat tidur, tubuh akan “memperbaiki” sel-sel di dalam tubuh termasuk sel kulit. \n\n
    5. Hindari Merokok \n
    Rokok tak hanya dapat merusak tubuh kamu tetapi juga kulit kamu. Nikotin dan zat–zat beracun yang terdapat di dalam rokok dapat merusak kolagen dan elastin (kolagen berfungsi untuk menjaga kulit tetap kenyal dan kencang), sehingga kulit kamu pun akan terlihat lebih kendur dan timbul kerutan. \n
    Selain itu rokok juga dapat merusak pembuluh darah sehingga aliran darah ke kulit menjadi terganggu, aliran oksigen tidak maksimal dan akibatnya kulit kamu menjadi kering dan kusam. \n\n
    6. Perbanyak Asupan Buah dan Sayur \n
    Berdasarkan studi dari the British Journal of Nutrition disebutkan bahwa menjalani pola makan yang kaya akan buah dan sayuran dapat menurunkan risiko kematian dini, menurunkan risiko kanker, sindrom metabolik, penyakit jantung, depresi dan penyakit degeneratif di otak. \n
    Konsumsi banyak buah dan sayuran juga bermanfaat bagi kesehatan kulit. Sebagai contoh, buah tomat. Pada suatu studi yang dipublikasikan di jurnal scientific reports, disebutkan bahwa konsumsi tomat secara rutin setiap harinya dapat menurunkan risiko kanker kulit hingga 50 persen setelah paparan sinar UV. \n\n
    7. Rajin Membersihkan Wajah \n
    Walau sudah melindungi kulit wajah menggunakan pelembap dan tabir surya, jangan lupa untuk bersihkan wajah ya. Terlebih lagi polusi udara yang menempel pada kulit tak boleh disepelekan. \n
    Hal ini wajib dilakukan, bersihkanlah kulit wajah setidaknya dua kali dalam sehari, pada pagi hari dan malam hari sebelum tidur. Jika memungkinkan, lanjutkan dengan toner untuk mengangkat minyak, debu, kotoran dan make up yang tertinggal. \n\n
    8. Jalani Pola Hidup Sehat \n
    Jalani pola makan yang sehat. Konsumsi makanan yang mencukupi kebutuhan gizi tubuh dengan seimbang. Makanan yang diproses dengan digoreng atau berminyak maupun dibakar, sedikit banyak memicu zat karsinogenik yang menyebabkan proses radikal bebas pada tubuh yang berakhir penuaan dini pada kondisi tubuh.  \n\n
    9. Berolahraga \n
    Berolahraga sangat bagus untuk kulit, namun kamu harus memperhatikan beberapa hal seperti intensitas olahraga, waktu berolahraga, kapan dan dimana kamu berolahraga. Berlari, bersepeda, dan yoga adalah pilihan terbaik yang bisa membantu kulit kamu tetap sehat dan cerah. \n\n
    10. Kelola Stres \n
    Stres yang tak terkontrol bisa membuat kulit kamu menjadi lebih sensitif dan memicu jerawat serta masalah kulit lainnya. Untuk menjaga kulit tetap sehat, penting untuk mengelola stres dengan melakukan aktivitas sederhana seperti tidur yang cukup, kurangi daftar tugas, luangkan waktu untuk hal-hal yang kamu sukai. Dengan mengelola stres, kamu juga merawat kesehatan kulit secara keseluruhan. \n
    Merawat kulit tidak selalu harus mahal dan mengeluarkan biaya banyak. Yuk jaga kesehatan kulit kamu mulai dari sekarang dengan cara mudah di atas. Jangan ragu pula untuk segera mengkonsultasikan keluhan kamu pada ahli kesehatan kulit yang berkompetensi. Pendapat mereka akan memperkaya khazanah pengetahuan secara instant. \n\n
    </string>
    <string name="change_your_password">Change Your Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="fill_your_new_password">Fill your new password</string>
    <string name="save_change">Save Change</string>
</resources>