<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragment.HomeFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="84dp"
        android:background="@drawable/customhomecomponent">

        <ImageButton
            android:id="@+id/bt_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@color/color_primary"
            android:src="@drawable/baseline_logout_24"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView2" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="90dp"
            android:padding="2dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/logo_team"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textslogan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slogan"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_name_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/welcome_user"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:text="@string/protect_your_skin"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="334dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="24dp"
        app:cardBackgroundColor="@color/paralax_color"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <RelativeLayout
            android:id="@+id/layoutscan"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/i_button_scan"
                android:layout_width="104dp"
                android:layout_height="98dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="48dp"
                android:background="@color/paralax_color"
                android:scaleType="fitXY"
                android:src="@drawable/ic_add_a_photo_24" />

            <TextView
                android:layout_width="202dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/i_button_scan"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="84dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="76dp"
                android:layout_marginBottom="76dp"
                android:text="@string/paralax_add_image_desc"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:gravity="center"
        android:text="@string/article_home"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:padding="2dp"
        android:layout_marginHorizontal="24dp"
        android:background="@drawable/card_radius"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/iv_article_home"
            android:layout_width="74dp"
            android:layout_height="63dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="8dp"
            android:scaleType="fitXY"
            android:src="@drawable/photo_article_home" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_contain_article"
                android:layout_width="wrap_content"
                android:layout_height="73dp"
                android:text="@string/article_home_teks"
                android:textColor="@color/purple_200"
                android:textSize="18dp" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>