<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.changepassword.ChangePasswordActivity">


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@color/color_primary"
                app:layout_constraintTop_toTopOf="parent">

                <!-- Back Button -->
                <ImageButton
                    android:id="@+id/btn_back_change_password"
                    android:layout_width="39dp"
                    android:paddingRight="15dp"
                    android:layout_height="24dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="4dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/baseline_arrow_back_24" />
            </RelativeLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="20dp"
                android:layout_marginTop="14dp"
                android:letterSpacing="0.02"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/change_your_password"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:textColor="#78828A"
                android:text="@string/update_what_you_need"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="296dp"
                android:layout_height="212dp"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:src="@drawable/ic_baseline_lock_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/current_password"
                android:fontFamily="@font/poppins_semibold"
                android:layout_marginStart="20dp"
                android:textSize="14sp"
                app:startIconDrawable="@drawable/ic_baseline_lock_24"
                app:endIconMode="password_toggle"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/currentPasswordEditTextLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="password_toggle"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnChangePassword"
                app:startIconDrawable="@drawable/ic_baseline_lock_24">

                <com.project.bangkit.dermascan.ui.customview.PasswordView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/current_password"
                    android:inputType="textEmailAddress"
                    android:paddingHorizontal="18dp"
                    android:paddingVertical="18dp"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="13dp"
                android:text="@string/new_password"
                android:fontFamily="@font/poppins_semibold"
                android:layout_marginStart="20dp"
                android:textSize="14sp"
                app:startIconDrawable="@drawable/ic_baseline_lock_24"
                app:endIconMode="password_toggle"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordEditTextLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="password_toggle"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnChangePassword"
                app:startIconDrawable="@drawable/ic_baseline_lock_24">

                <com.project.bangkit.dermascan.ui.customview.PasswordView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/fill_your_new_password"
                    android:background="@drawable/border_ed"
                    android:inputType="textPassword"
                    android:paddingHorizontal="18dp"
                    android:paddingVertical="18dp"
                    android:textSize="18sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnChangePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="28dp"
                android:layout_marginBottom="38dp"
                android:background="@drawable/card_radius"
                android:fontFamily="@font/poppins_light"
                android:text="@string/save_change"
                app:backgroundTint="@color/color_primary" />
        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>