<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    android:layout_marginBottom="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16sp"
        android:layout_marginEnd="16sp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp" >

        <ImageView
            android:id="@+id/iv_history_image"
            android:layout_width="82dp"
            android:layout_height="90dp"
            android:src="@drawable/dermascanlogo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/tv_history_result"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/history_result"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_history_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/iv_history_image"
            app:layout_constraintTop_toTopOf="@+id/iv_history_image"
            app:layout_constraintVertical_bias="0.468" />

        <TextView
            android:id="@+id/tv_history_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/history_date"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toTopOf="@+id/iv_history_image"
            app:layout_constraintStart_toEndOf="@id/iv_history_image"
            android:layout_marginStart="20dp"
            android:textSize="10sp"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/pink"/>

        <TextView
            android:id="@+id/tv_history_advice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/history_advice"
            android:maxLines="3"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_history_image"
            app:layout_constraintStart_toEndOf="@id/iv_history_image"
            app:layout_constraintTop_toTopOf="@+id/iv_history_image"
            app:layout_constraintVertical_bias="1.0" />


        <!--        <TextView-->
<!--            android:id="@+id/"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="20dp"-->
<!--            android:fontFamily="@font/poppins_regular"-->
<!--            android:gravity="right"-->
<!--            android:textColor="@color/font_black"-->
<!--            android:textSize="10sp"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintStart_toEndOf="@+id/yoga_image" />-->
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
